[package]
name = "uuid-utils"
version = "0.14.1"
edition = "2024"

[lib]
name = "uuid_utils"
crate-type = ["cdylib"]

[dependencies]
mac_address = "1.1.8"
pyo3 = { version = "0.27.2", features = [
    "extension-module",
    "generate-import-lib",
    "abi3-py39"
]}
rand = "0.9.2"
uuid = { version  = "1.20.0", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
    "fast-rng",
]}
ahash = "0.8.12"
