[package]
name = "uuid-utils"
version = "0.16.2"
edition = "2024"

[lib]
name = "uuid_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = [
    "extension-module",
    "generate-import-lib",
]}
rand = "0.10.1"
uuid = { version  = "1.23.3", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
    "fast-rng",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mac_address = "1.1.8"
