[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "uuid_utils"
readme = "README.md"
description = "Fast, drop-in replacement for Python's uuid module, powered by Rust."
authors = [{ name = "Amin Alaee", email = "mohammadamin.alaee@gmail.com" }]
keywords = ["rust", "uuid"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

dynamic = ["license", "version"]

[project.urls]
Documentation = "https://github.com/aminalaee/uuid-utils"
Issues = "https://github.com/aminalaee/uuid-utils/issues"
Source = "https://github.com/aminalaee/uuid-utils"

[tool.maturin]
python-source = "python"
module-name = "uuid_utils._uuid_utils"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C4",
    "UP",
]
